--- a/package.json
+++ b/package.json
@@ -22,12 +22,8 @@
   "dependencies": {
     "@mailchimp/mailchimp_transactional": "^1.0.46",
     "agora-access-token": "^2.0.4",
-    "ajv": "^8.6.1",
-    "aws-sdk": "^2.961.0",
-    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-graphql": "^0.12.0",
@@ -35,8 +31,7 @@
     "graphql": "^15.6.1",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.0.2",
-    "module-alias": "^2.2.2",
-    "tai-password-strength": "^1.1.2"
+    "module-alias": "^2.2.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
